<?xml version="1.0" encoding="utf-8"?>
<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->
<resources>
    <!-- Simple strings. -->
    <string name="mpv_activity">mpv</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="ui_volume">Volume: %d%%</string>
    <string name="ui_brightness">Brightness: %d%%</string>

    <!-- Less simple strings -->
    <string name="error_no_file">No file given, exiting</string>
    <string name="notice_file_appended">File was appended to playlist</string>
    <string name="exit_warning_playlist">%d playlist items remaining.\nDo you really want to exit?</string>

    <!-- Action buttons -->
    <string name="switch_orientation">Switch Orientation</string>
    <string name="open_external_audio">Open external audio…</string>
    <string name="open_external_sub">Open external subtitle…</string>
    <string name="playlist_append">Append to playlist…</string>
    <string name="resume_bg_playback">Play in background</string>
    <string name="action_settings">Settings</string>
    <string name="action_open_url">Open URL</string>
    <string name="action_pick_file">Pick File</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_default_file_manager_path_title">Default File Manager Path</string>
    <string name="pref_default_file_manager_path_hint">Set the initial file manager path</string>
    <string name="pref_default_file_manager_path_summary" translatable="false">%s</string>

    <string name="pref_default_audio_language_title">Default Audio Language</string>
    <string name="pref_default_audio_language_message">Select audio language(s) to be selected by default when playing a video with multiple audio streams.\nContainers typically use two- or three-letter languages codes. Multiple values can be delimited by comma.</string>
    <string name="pref_default_audio_language_summary" translatable="false">%s</string>

    <string name="pref_default_subtitle_language_title">Default Subtitle Language</string>
    <string name="pref_default_subtitle_language_message">Select subtitle language(s) to be selected by default when playing a video with multiple subtitles. Multiple values can be delimited by comma.\nContainers typically use two- or three-letter languages codes. Multiple values can be delimited by comma.</string>
    <string name="pref_default_subtitle_language_summary" translatable="false">%s</string>

    <string name="pref_hardware_decoding_title">Hardware decoding</string>
    <string name="pref_hardware_decoding_summary">This option if selected will attempt hardware decoding before falling back to software</string>

    <string name="pref_touch_gestures_title">Touch gestures</string>
    <string name="pref_touch_gestures_summary">Control brightness, volume or seek in either direction using touch gestures</string>

    <string name="pref_background_play_title">Background playback</string>
    <string name="pref_background_play_summary">When to automatically resume playback in background</string>
    <string name="pref_background_play_default" translatable="false">never</string>

    <string name="pref_save_position_title">Save position on quit</string>
    <string name="pref_save_position_summary">Remember current playback position on exit. When the same file is played again, seek to the previous position.</string>

    <string name="pref_auto_rotation_title">Screen orientation</string>
    <string name="pref_auto_rotation_summary">Decide which orientation mpv will play landscape or portrait videos in</string>
    <string name="pref_auto_rotation_default" translatable="false">auto</string>


    <string name="pref_header_video">Video</string>

    <string name="pref_video_upscale_title">Upscaling filter</string>

    <string name="pref_video_downscale_title">Downscaling filter</string>

    <string name="pref_video_debanding_title">Debanding</string>
    <string name="pref_video_debanding_summary">Select video debanding mode</string>

    <string name="pref_video_interpolation_title">Interpolation</string>
    <string name="pref_video_interpolation_message">Reduce judder caused by mismatched video FPS and display refresh rate.</string>
    <string name="pref_video_interpolation_sync_default" translatable="false">audio</string>

    <string name="pref_video_tscale_title">Temporal interpolation filter</string>
    <string name="pref_video_tscale_summary">Select the filter used for interpolating the temporal axis (frames)</string>
    <string name="pref_video_tscale_message">These settings only take effect if Interpolation is enabled above.</string>



    <string name="pref_video_fastdecode_title">Low-quality video decoding</string>
    <string name="pref_video_fastdecode_summary">Trades quality for speed and thus fluent playback.\n<b>REDUCES QUALITY A LOT</b></string>


    <string name="pref_header_developer">Developer</string>

    <string name="pref_developer_stats_title">Show stats</string>
    <string name="pref_developer_stats_summary">Select which statistics are displayed</string>

    <string name="pref_developer_gpudebug_title">Enable OpenGL debugging</string>
    <string name="pref_developer_gpudebug_summary">Switches video rendering to a debug mode</string>


    <string name="pref_header_advanced">Advanced</string>

    <string name="pref_advanced_version">Version information</string>

    <string name="pref_advanced_gpu_api_title">Graphics API</string>
    <string name="pref_advanced_gpu_api_default" translatable="false">opengl</string>
    <string name="pref_advanced_gpu_api_summary" translatable="false">%s</string>

    <string name="pref_advanced_audio_output_title">Audio output</string>
    <string name="pref_advanced_audio_output_default" translatable="false">audiotrack</string>
    <string name="pref_advanced_audio_output_summary" translatable="false">%s</string>

    <string name="pref_advanced_mpvconf">Edit mpv.conf</string>
    <string name="pref_advanced_mpvconf_message">You can directly edit mpv\'s config here.\n\nImportant: mpv-android will overwrite some settings, so don\'t try to set e.g. \"dscale\" here.\nGenerally this applies to all settings that have a native equivalent in the settings menu.</string>

    <string name="pref_advanced_inputconf">Edit input.conf</string>
    <string name="pref_advanced_inputconf_message">You can edit input.conf here, this is mainly useful for TV remotes and keyboards.\n\nImportant: mpv-android has some hardcoded key handlers which can\'t be redefined here, e.g. \'j\' to cycle subtitles.</string>

    <!-- Strings used in Settings dialog preferences -->
    <string name="scaler_param1">Param 1:</string>
    <string name="scaler_param2">Param 2:</string>
    <string name="interpolation_switch">Enable Interpolation</string>
    <string name="interpolation_video_sync">Video sync:</string>

    <!-- File picker -->
    <string name="nnf_name">Name</string>
    <string name="nnf_permission_external_write_denied">Permission to access file system denied</string>
    <string name="nnf_filename">Filename</string>
</resources>
