<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="@string/pref_advanced_audio_output_default"
        android:key="audio_output"
        android:summary="@string/pref_advanced_audio_output_summary"
        android:entries="@array/audio_output_list"
        android:entryValues="@array/audio_output_values"
        android:title="@string/pref_advanced_audio_output_title" />

    <is.xyz.mpv.ConfigEditDialog
        android:key=""
        app:filename="mpv.conf"
        android:title="@string/pref_advanced_mpvconf"
        android:dialogMessage="@string/pref_advanced_mpvconf_message"
        android:positiveButtonText="@string/dialog_save"
        android:negativeButtonText="@string/dialog_cancel" />

    <is.xyz.mpv.ConfigEditDialog
        android:key=""
        app:filename="input.conf"
        android:title="@string/pref_advanced_inputconf"
        android:dialogMessage="@string/pref_advanced_inputconf_message"
        android:positiveButtonText="@string/dialog_save"
        android:negativeButtonText="@string/dialog_cancel" />

    <is.xyz.mpv.VersionInfoDialog
        android:key=""
        android:title="@string/pref_advanced_version"
        android:negativeButtonText="@null" />

</PreferenceScreen>
